# vlog

./: .editorconfig  .gitignore  .gitmodules  DESCRIBE_REFACTOR_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  Snakefile  config.yaml  davinci_clip_importer.py  db.py  db_extract.py  db_extract_v2.py  describe.py  index.html  ingest.sh  main.py  pyproject.toml  test_status_tracking.sh  transcribe.sh  video.py  web.py
.github/: copilot-instructions.md
.github/agents_docs/: LOGGER_PLUGIN_SUMMARY.md  SNAKEMAKE_QUICKSTART.md  SNAKEMAKE_WORKFLOW.md  STATUS_LOGGER.md
docs/: AUDIO_PROCESSING_REFACTOR.md  AUTO_INGEST.md  AUTO_INGEST_PROGRESS_FIX.md  AUTO_INGEST_SNAKEMAKE.md  DAEMON_MANAGEMENT.md  DAVINCI_INTEGRATION.md  DESCRIBE_ARCHITECTURE.md  DESCRIBE_REFACTORING.md  EXAMPLE_WORKFLOW.md  EXPECTED_TOTAL_FEATURE.md  FIX_WEB_RESPONSIVENESS.md  PROJECT_STATE.md  PROJECT_STRUCTURE.md  SNAKEMAKE_QUICKSTART.md  SNAKEMAKE_WORKFLOW.md  STAGED_WORKFLOW.md  STATUS_LOGGER.md  STATUS_LOGGER_QUICKREF.md  SUMMARY_WEB_RESPONSIVENESS.md  THUMBNAIL_MIGRATION.md  TIMING_DIAGRAM.md  VAD_TRANSCRIPTION.md
examples/: config.yaml
prompts/: describe_v1.md
scripts/: check_logger_api.sh  create_preview.py  create_proxies.py  demo_status_logger.py  describe_to_json.py  ingest.sh  launch_web.sh  make_proxies.sh  migrate_add_segments.py  run_snakemake.sh  run_snakemake_single_file.py  run_snakemake_with_logger.sh  run_with_status_logger.py  setup_davinci_config.sh  setup_uv.sh  snakemake_status.py  test_already_satisfied.py  test_auto_ingest_fix.sh  test_davinci_integration.py  test_describe_refactor.sh  test_expected_total.py  test_parse_time.py  test_snakemake_events.py  transcribe.sh  verify_snakemake_env.py
src/ingest_pipeline/: Snakefile  copy.smk  daemon.smk  describe.smk  describe_to_json.py  srt_cleaner.py  subtitles.smk
src/ingest_pipeline/scripts/: describe_to_json.py  srt_cleaner.py  transcribe.py  vad_utils.py
src/ingest_pipeline/snakefiles/: Snakefile  copy.smk  daemon.smk  describe.smk  subtitles.smk
src/proto/: Segment.json  VideoDescription.json  describe.proto  describe_pb2.py
src/snakemake_logger_plugin_vlog/: __init__.py
src/vlog/: __init__.py  __main__.py  auto_ingest.py  auto_ingest_snakemake.py  davinci_clip_importer.py  db.py  db_extract_v2.py  describe.py  describe_client.py  describe_daemon.py  describe_lib.py  launcher.py  launcher_utils.py  srt_cleaner.py  video.py  web.py  web_integrated.py
src/vlog/prompts/: describe_v1.md  describe_v1.yaml
src/vlog/snakemake_logger_plugin/: __init__.py  api_server.py  helpers.py  logger.py
src/vlog/static/: index.html
src/vlog/static/launcher/: launcher.html
src/vlog/workflows/: Snakefile
src/vlog/workflows/scripts/: discover_videos.py  start_daemon.sh  vad_utils.py  (+1 more)
static/: index.html
static/launcher/: launcher.html
test_data/: MIGRATION_DEMO.txt
tests/: __init__.py  conftest.py  manual_test_web_responsiveness.py  test_audio_processing_integration.py  test_auto_ingest.py  test_auto_ingest_lock_fix.py  test_auto_ingest_snakemake.py  test_auto_ingest_snakemake_integration.py  test_create_proxies.py  test_davinci_importer.py  test_db.py  test_describe_integration.py  test_directory_browser.py  test_launcher_storage.py  test_logger_integration.py  test_prompts.py  test_snakemake_workflow.py  test_status_logger.py  test_vad_transcribe.py  test_video.py  test_web.py
(+4 files in other folders)
