[project]
name = "vlog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "mlx-vlm>=0.3.5",
    "jinja2>=3.0",
    "pydantic>=1.10",
    "watchdog>=3.0.0",
    "torch>=2.9.0",
    "torch-vision>=0.1.6.dev0",
    "torchvision>=0.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "snakemake>=9.0.0",
    "pyyaml>=6.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/vlog",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vlog*", "snakemake_logger_plugin_vlog*"]

[project.entry-points."snakemake.plugins.logger"]
vlog = "snakemake_logger_plugin_vlog:LogHandler"
